View Issue Details

IDProjectCategoryView StatusLast Update
0023721Open CASCADEOCCT:DRAWpublic2013-04-29 15:22
ReportersanAssigned Toaba 
PrioritynormalSeverityminor 
Status closedResolutionfixed 
PlatformAOSL 
Product Version6.5.4 
Target Version6.6.0Fixed in Version6.6.0 
Summary0023721: Missing usage hints for vselmode command
Descriptionvselmode command usage reported by "help vselmode":

vselmode [object] mode On/Off (0/1)

Rules to specify "mode" argument are not explained. This results in creation of incorrect test cases, e.g. during 0023525 testing the following test case was created:

vinit
box t_box 100 100 100
vdisplay t_box
vfit

vmoveto 0 0
vselmode EDGE ON
vmoveto 110 352

because removed QASetChoiceMode accepted human-readable mode names.

It is not correct, however, to re-use the same approach for vselmode, because selection mode meaning depends on a particular interactive object, so "edge selection" for AIS_Shape might be something completely different in case of e.g. MeshVS_Mesh interactive object.

So it is suggested to improve the help string for vselmode as follows:

vselmode : [object] mode_number 0|1
mode_number is non-negative integer that has different meaning for different interactive object classes. For shapes, the following mode_number values are allowed:
0 - Shape
1 - Vertex
2 - Edge
3 - Wire
4 - Face
5 - Shell
6 - Solid
7 - Compsolid
8 - Compound


TagsNo tags attached.
Test case numberbugs vis(004) bug23525

Relationships

related to 0023539 closedaba QASelect and QAShiftSelect commands 
related to 0023525 closedkgv Disappearing of highlight in screenshot 
child of 0023536 closedbugmaster Modes of QASetChoiceMode command 

Activities

aba

2013-01-24 12:31

developer   ~0023117

The git branch CR23721 was ready to be reviewed.
Help string for vselmode was modified, explanation for selection mode numbers usage was added.
Dear san, please review.

san

2013-01-24 14:56

developer   ~0023124

Branch CR23721 reviewed without remarks, ready for testing.

mkv

2013-02-18 15:33

tester   ~0023372

Dear BugMaster,

Branch CR23721 (and products from GIT master) was compiled on Linux and Windows platforms and tested.
SHA-1: 4aae5aa0f84bfa2d29e4530670a81569060baaa0

Number of compiler warnings:

occt component :
Linux: 3 (3 on master)
Windows: 57 (57 on master)

products component :
Linux: 9 (9 on master)
Windows: 50 (50 on master)

Regressions:
No regressions

Improvements:
No improvements

Testing cases:
bugs vis(004) bug23525 - OK

Testing on Linux:
Total MEMORY difference: 218227192 / 217617252
Total CPU difference: 12081.290000000206 / 9351.070000000449

Testing on Windows:
Total MEMORY difference: 306669016 / 306641464
Total CPU difference: 11654.796875 / 11643.890625

There are not serious differences in images found by testdiff.

Related Changesets

occt: master 446e9c14

2013-02-22 10:16:58

aba

Details Diff
0023721: Missing usage hints for vselmode command

vselmode help string was modified.
Changed error case message.
Affected Issues
0023721
mod - src/ViewerTest/ViewerTest_ObjectCommands.cxx Diff File

Issue History

Date Modified Username Field Change
2013-01-23 19:03 san New Issue
2013-01-23 19:03 san Assigned To => aba
2013-01-23 19:03 san Status new => assigned
2013-01-23 19:03 san Relationship added related to 0023539
2013-01-23 19:04 san Relationship added related to 0023525
2013-01-24 10:19 san Relationship added child of 0023536
2013-01-24 12:31 aba Note Added: 0023117
2013-01-24 12:31 aba Assigned To aba => san
2013-01-24 12:31 aba Status assigned => resolved
2013-01-24 14:56 san Note Added: 0023124
2013-01-24 14:56 san Assigned To san => bugmaster
2013-01-24 14:56 san Status resolved => reviewed
2013-01-24 16:24 mkv Assigned To bugmaster => mkv
2013-02-18 15:33 mkv Note Added: 0023372
2013-02-18 15:34 mkv Test case number => bugs vis(004) bug23525
2013-02-18 15:34 mkv Assigned To mkv => bugmaster
2013-02-18 15:34 mkv Status reviewed => tested
2013-02-26 10:00 aba Changeset attached => occt master 446e9c14
2013-02-26 10:00 aba Assigned To bugmaster => aba
2013-02-26 10:00 aba Status tested => verified
2013-02-26 10:00 aba Resolution open => fixed
2013-04-23 13:35 aiv Status verified => closed
2013-04-29 15:22 aiv Fixed in Version => 6.6.0