0023721: Missing usage hints for vselmode command

vselmode help string was modified.
Changed error case message.